--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.5.2",
     "autoprefixer": "10.4.16",
+    "axios": "^1.6.0",
     "eslint": "8.52.0",
     "eslint-config-next": "14.0.1",
     "next": "14.0.1",
     "postcss": "8.4.31",
     "react": "18.2.0",
+    "react-data-table-component": "^7.5.4",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.47.0",
+    "react-hot-toast": "^2.4.1",
     "tailwindcss": "3.3.5"
+  },
+  "devDependencies": {
+    "prisma": "^5.5.2"
   }
 }
