--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "next": "14.0.1",
     "postcss": "8.4.31",
     "react": "18.2.0",
+    "react-currency-input-field": "^3.6.11",
     "react-data-table-component": "^7.5.4",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
+    "react-select": "^5.7.7",
     "tailwindcss": "3.3.5"
   },
   "devDependencies": {
